--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ a {
 <body>
   <p id="demo">Clicks</p>
   <p id=one>There is a 1 in a 10000000 probability</p>
-  <a href="" >Information</a>
+  <a href="info.html" >Information</a>
   <canvas>
   </canvas>
 </body>
