--- a/index.html
+++ b/index.html
@@ -14,6 +14,12 @@
   right: 10px;
   top: 0px;
 }
+  
+#two {
+  position: absolute;
+  right: 10px;
+  bottom: 0px;
+  }
 
 body {
   
@@ -29,7 +35,7 @@ a {
 <body>
   <p id="demo">Clicks</p>
   <p id=one>There is a 1 in a 10000000 probability</p>
-  <a href="info.html" >Information</a>
+  <a id="two" href="info.html" >Information</a>
   <canvas>
   </canvas>
 </body>
