--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@ function click() {
     let x = Math.round(Math.random() * 10000000);
     if (x<2) {
     canvas.style.background = "green"
+    tap = 0
   }
 }
   
