--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Go Green</title>
+  <title>Make to Green</title>
 </head>
 <style>
   canvas {
