--- a/info.html
+++ b/info.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Go Green</title>
+  <title>Make to Green</title>
 </head>
 <body>
   <h1>The aim</h1>
