--- a/info.html
+++ b/info.html
@@ -11,5 +11,7 @@
   1 in a 10000000 probability.
   <h1>How to play?</h1>
   Just click the grey rectangle and you will see how the "clicks" in the top-left corner increase.
+  <h1>Join our community!</h1>
+  <a href="https://discord.gg/GCKpMr49Xs">Discord</a>
 </body>
 </html>
