--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Make to Green</title>
+  <link rel="icon" type="image/x-icon" href="Greenfav.ico">
 </head>
 <style>
   canvas {
