--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ a {
   right: 300px;
 }
 </style>
-<body scroll="no">
+<body scroll="no" style="overflow: hidden">
   <p id="demo">Clicks</p>
   <p id=one>There is a 1 in a 10000000 probability</p>
   <canvas>
