--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ function click() {
   tap++
  document.getElementById("demo").innerHTML = tap;
   
-    let x = Math.round(Math.random() * 10);
+    let x = Math.round(Math.random() * 10000000);
     if (x<2) {
     canvas.style.background = "green"
     tap = 0
